CSS and Light house issue fixes for layout shift

--- a/scripts/browse-card/browse-card-placeholder.css
+++ b/scripts/browse-card/browse-card-placeholder.css
@@ -11,7 +11,7 @@
   transition: all .5s ease-in-out;
   overflow-x: auto;
   overflow-y: hidden;
-  min-height: 400px;
+  min-height: 377px;
 }
 .shimmer-placeholder.is-hidden {
   display: none;
