--- a/scripts/browse-card/browse-card.css
+++ b/scripts/browse-card/browse-card.css
@@ -10,7 +10,6 @@
 .browse-card:hover {
   box-shadow: var(--box-shadow-2);
 }
-
 .browse-card * {
   box-sizing: border-box;
 }
@@ -68,10 +67,12 @@
   color: var(--spectrum-gray-700);
 }
 .browse-card .browse-card-figure {
-  max-height: 200px;
   min-height: 72px;
   overflow: hidden;
   position: relative;
+}
+.browse-card .browse-card-figure.img-custom-height{
+  min-height: 153px;
 }
 .browse-card .browse-card-figure img {
   width: 100%;
@@ -81,6 +82,7 @@
 }
 .browse-card .browse-card-content {
   padding: 16px 16px 12px 15px;
+  min-height: 246px;
 }
 .browse-card .browse-card-meta-info {
   display: flex;
@@ -103,6 +105,7 @@
   align-items: flex-end;
   justify-content: space-between;
   width: 100%;
+  min-height: 55px;
 }
 .browse-card .browse-card-footer .browse-card-options {
   position: relative;
@@ -189,9 +192,6 @@
 .browse-card.course-card .browse-card-banner {
   background-color: var(--non-spectrum-victoria-blue);
 }
-.browse-card.course-card .browse-card-figure {
-  max-height: 143px;
-}
 .browse-card.course-card .browse-card-meta-info .icon {
   height: 11px;
   width: 11px;
@@ -207,9 +207,6 @@
 .browse-card.tutorial-card .browse-card-banner {
   background-color: var(--non-spectrum-light-coral);
 }
-.browse-card.tutorial-card .browse-card-figure {
-  max-height: 140px;
-}
 .browse-card.article-card .browse-card-banner, .browse-card.troubleshoot-card .browse-card-banner, .browse-card.certificate-card .browse-card-banner, .browse-card.certification-card .browse-card-banner, .browse-card.instructor-card .browse-card-banner {
   background-color: var(--non-spectrum-lime-green);
 }
@@ -219,8 +216,11 @@
 .browse-card.troubleshoot-card .browse-card-banner {
   background-color: var(--non-spectrum-royal-crest);
 }
-.browse-card.event-card .browse-card-banner, .browse-card.live-events-card .browse-card-banner {
+.browse-card.event-card .browse-card-banner {
   background-color: var(--non-spectrum-dark-princess-pink);
+}
+.browse-card.live-events-card .browse-card-banner {
+  background-color: var(--non-spectrum-darker-princess-pink)
 }
 .browse-card.certificate-card .browse-card-banner, .browse-card.certification-card .browse-card-banner {
   background-color: var(--non-spectrum-frost-bite);
@@ -249,12 +249,6 @@
   width: 11px;
 }
 @media only screen and (min-width: 900px) {
-  .browse-card.tutorial-card .browse-card-figure {
-    max-height: 199px;
-  }
-  .browse-card.course-card .browse-card-figure {
-    max-height: 199px;
-  }
   .browse-card.course-card .browse-card-content {
     padding: 16px 16px 12px;
   }
