--- a/scripts/browse-card/browse-cards-block.css
+++ b/scripts/browse-card/browse-cards-block.css
@@ -51,7 +51,7 @@
     overflow-x: auto;
     overflow-y: hidden;
     padding-bottom: 2px;
-    min-height: 400px;
+    min-height: 377px;
 }
 .browse-cards-block-content > div {
     flex: 0 0 264px;
