--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -315,12 +315,13 @@
   --non-spectrum-dim-orange: #e2a43e;
   --non-spectrum-victoria-blue: #147af3;
   --non-spectrum-lime-green: #12805c;
-  --non-spectrum-royal-crest: #f46700;
+  --non-spectrum-royal-crest: #e46f00;
   --non-spectrum-dark-princess-pink: #c82269;
-  --non-spectrum-frost-bite: #962af0;
+  --non-spectrum-darker-princess-pink: #ad0955;
+  --non-spectrum-frost-bite: #893de7;
   --non-spectrum-cyan-paprika: #004491;
   --non-spectrum-venetian-green: #27bb36;
-  --non-spectrum-bright-cyan: #20a3a8;
+  --non-spectrum-bright-cyan: #00a19a;
   --non-spectrum-azure-blue: #378ef0;
   --non-spectrum-silver-mist: #d2d2d2;
   --non-spectrum-link-blue: #378ef0;
